# storyforge

./: .gitignore  ACCESS.md  README.md  TODO.md  pyproject.toml  requirements-dev.txt  tortoise
.github/workflows/: deploy_status_do.yml  ui_smoke.yml
apps/app-platform/: Dockerfile  requirements.txt
apps/app-platform/app/: app_version.py  auth.py  db.py  library.py  library_db.py  library_pages.py  library_viewer.py  main.py  (+10 more)
assets/credits/: SOURCES.md  index.jsonl
docker/voicegen/: Dockerfile
docs/: infra.md  monitor.md  ops-expand-sfx-library.md  sfml.md  sfml_generation.md  sfml_llm_generation.md  sfml_spec.md  sfml_v1.md  storyforge-markup.md  subsystems.md  ui_base_template.md  voice-generator.md
examples/: umbrella.sfml
manifests/: assets.yaml  tortoise_voice_roster.yaml  voice_roster.yaml
monitor/: README.md  allow_cidrs.json  app.py  token.example.txt
monitor/static/: index.html  job.html  ping.html  sfml_view.html  voices.html
ops/tinybox-compute-node/: README.md
src/storyforge/: audio.py  cli.py  generation.py  sfml.py
stories/: README.md
stories/example-1/: story.md
stories/lion-and-mouse/: characters.yaml  meta.yaml  story.md
stories/maris-lighthouse/: characters.yaml
stories/tortoise-and-hare/: characters.yaml  meta.yaml
tests/ui/: test_smoke.py
tools/: fetch_assets.sh  fetch_assets_http.py  pack_assets.sh  storyforge.sh  storyforge_render_monitored.sh  styletts2_runner.py  sync_freesound.py  ui_smoke.sh  upload_assets_s3cmd.sh  upload_sfx_tree_s3cmd.sh  voicegen_styletts2.sh  voicegen_tortoise.sh  voicegen_xtts.sh
(+9 files in other folders)
