[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "storyforge"
version = "0.1.0"
description = "Storyforge: story generation + audio production from SFML scripts"
requires-python = ">=3.10"
dependencies = [
  "requests",
  "pyyaml",
]

[project.scripts]
storyforge = "storyforge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
